--- a/index.html
+++ b/index.html
@@ -462,38 +462,51 @@
           </p>
         </div>
 
-        <div class="contact-grid">
-          <form class="card contact-form reveal" id="contactForm" novalidate data-scroll3d action="https://formsubmit.co/mitcel258@gmail.com" method="POST" data-formsubmit="true">
-            <div class="field">
-              <label for="name">Name</label>
-              <input id="name" name="name" type="text" autocomplete="name" required maxlength="80" placeholder="Your name" />
-              <small class="error" data-error-for="name"></small>
-            </div>
+      <form class="card contact-form reveal" id="contactForm" novalidate data-scroll3d
+      action="https://formsubmit.co/mitcel258@gmail.com" method="POST" data-formsubmit="true">
 
-            <div class="field">
-              <label for="email">Email</label>
-              <input id="email" name="email" type="email" autocomplete="email" required maxlength="120" placeholder="name@example.com" />
-              <small class="error" data-error-for="email"></small>
-            </div>
+  <!-- FormSubmit configuration -->
+ <input type="hidden" id="formNext" name="_next" value="https://termenator46.github.io/portfolio-/?sent=1#contact">
+  <input type="hidden" name="_subject" value="New message from QA Portfolio">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_template" value="table">
 
-                        
+  <div class="field">
+    <label for="name">Name</label>
+    <input id="name" name="name" type="text" autocomplete="name" required maxlength="80" placeholder="Your name" />
+    <small class="error" data-error-for="name"></small>
+  </div>
 
-            <div class="field">
-              <label for="company">Company</label>
-              <input id="company" name="company" type="text" autocomplete="organization" required maxlength="80" placeholder="Company (e.g. Acme Inc.)" />
-              <small class="error" data-error-for="company"></small>
-            </div>
+  <div class="field">
+    <label for="email">Email</label>
+    <input id="email" name="email" type="email" autocomplete="email" required maxlength="120" placeholder="name@example.com" />
+    <small class="error" data-error-for="email"></small>
+  </div>
 
-            <!-- Honeypot: hidden field to trap simple bots -->
-            <div class="field hp" aria-hidden="true">
-              <label for="website">Website</label>
-              <input id="website" name="website" type="text" tabindex="-1" autocomplete="off" />
-            </div>
-<div class="field">
-              <label for="message">Message</label>
-              <textarea id="message" name="message" rows="6" required maxlength="2000" placeholder="Type something..."></textarea>
-              <small class="error" data-error-for="message"></small>
-            </div>
+  <div class="field">
+    <label for="company">Company</label>
+    <input id="company" name="company" type="text" autocomplete="organization" required maxlength="80" placeholder="Company (e.g. Acme Inc.)" />
+    <small class="error" data-error-for="company"></small>
+  </div>
+
+  <!-- Honeypot: hidden field to trap simple bots -->
+  <div class="field hp" aria-hidden="true">
+    <label for="website">Website</label>
+    <input id="website" name="website" type="text" tabindex="-1" autocomplete="off" />
+  </div>
+
+  <div class="field">
+    <label for="message">Message</label>
+    <textarea id="message" name="message" rows="6" required maxlength="2000" placeholder="Type something..."></textarea>
+    <small class="error" data-error-for="message"></small>
+  </div>
+
+  <button class="btn primary full" type="submit" id="sendBtn">
+    Send Message
+  </button>
+
+  <p class="form-status" id="formStatus" role="status" aria-live="polite"></p>
+</form>
 
             
 
