--- a/index.html
+++ b/index.html
@@ -513,7 +513,8 @@ doctype html>
                         <!-- _next is set dynamically in JS so it works locally and on any domain -->
 
 
-                        <input type="hidden" id="formNext" name="_next" value="" />
+                       <input type="hidden" id="formNext" name="_next" value="https://termenator46.github.io/portfolio-/?sent=1#contact" />
+
 
 
             <button class="btn primary full" type="submit" id="sendBtn">
