--- a/index.html
+++ b/index.html
@@ -497,23 +497,14 @@ doctype html>
 
             
 
+<!-- FormSubmit configuration -->
+<input type="hidden" name="_subject" value="New message from QA Portfolio">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_template" value="table">
 
-                        <!-- FormSubmit configuration (no backend setup needed) -->
+<!-- Redirect back to YOUR GitHub Pages project URL -->
+<input type="hidden" name="_next" value="https://termenator46.github.io/portfolio-/?sent=1#contact">
 
-
-                        <input type="hidden" name="_subject" value="New message from QA Portfolio" />
-
-
-                        <input type="hidden" name="_captcha" value="false" />
-
-
-                        <input type="hidden" name="_template" value="table" />
-
-
-                        <!-- _next is set dynamically in JS so it works locally and on any domain -->
-
-
-                       <input type="hidden" id="formNext" name="_next" value="https://termenator46.github.io/portfolio-/?sent=1#contact" />
 
 
 
