--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ doctype html>
   <input type="hidden" name="_template" value="table">
 
   <!-- IMPORTANT: keep ONLY ONE _next in the whole file -->
-  <input type="hidden" id="formNext" name="_next" value="">
+  <input type="hidden" id="formNext" name="_next" value="https://termenator46.github.io/portfolio-/?sent=1#contact">
 
   <div class="field">
     <label for="name">Name</label>
