--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ doctype html>
                 <button class="mini-btn" type="button" data-scroll-to="#contact">Contact</button>
               </div>
 <p class="micro">
-                Tip: click a card to rotate the stack. Hover for depth.
+                Tip: click a card to rotate the stack. 
               </p>
             </div>
           </div>
