--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="timeline">
               <article class="timeline__item">
                 <header class="timeline__head">
-                  <h4>QA Automation Engineer <span class="muted">@ NextGen QA Lab</span></h4>
+                  <h4>QA Automation Engineer <span class="muted"> NextGen QA Lab</span></h4>
                   <span class="pill">Remote • 2023–2024</span>
                 </header>
                 <ul class="check">
@@ -309,11 +309,11 @@
 
               <article class="timeline__item">
                 <header class="timeline__head">
-                  <h4>QA Engineer (Manual / AI-focused) <span class="muted">@ Web Design Sun</span></h4>
+                  <h4>QA Engineer (Manual / AI-focused) <span class="muted"> Web Design Sun</span></h4>
                   <span class="pill">Remote • 2024–2025</span>
                 </header>
                 <ul class="check">
-                  <li>Owned quality validation for an AI text humanization system (“Walter”).</li>
+                  <li>Owned quality validation for an AI text humanization system (Walter).</li>
                   <li>Validated AI outputs for coherence, tone, relevance, and non-deterministic behavior.</li>
                   <li>Performed exploratory/regression testing; documented expected behavior and defects in Jira.</li>
                   <li>Conducted UI/UX testing from Figma designs; ensured responsive and cross-browser behavior.</li>
@@ -322,7 +322,7 @@
 
               <article class="timeline__item">
                 <header class="timeline__head">
-                  <h4>QA Automation Trainee (Internship) <span class="muted">@ Upteam QA Lab</span></h4>
+                  <h4>QA Automation Trainee (Internship) <span class="muted"> Upteam QA Lab</span></h4>
                   <span class="pill">Remote • 2025</span>
                 </header>
                 <ul class="check">
