--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               <article class="timeline__item">
                 <header class="timeline__head">
                   <h4>QA Engineer (Manual / AI-focused) <span class="muted"> Web Design Sun</span></h4>
-                  <span class="pill">Remote • 2024–2025</span>
+                  <span class="pill">Remote • 2025</span>
                 </header>
                 <ul class="check">
                   <li>Owned quality validation for an AI text humanization system (Walter).</li>
